; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ts/extr_ts_rsp_verify.c_ts_check_nonces.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ts/extr_ts_rsp_verify.c_ts_check_nonces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@TS_F_TS_CHECK_NONCES = common dso_local global i32 0, align 4
@TS_R_NONCE_NOT_RETURNED = common dso_local global i32 0, align 4
@TS_R_NONCE_MISMATCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__*)* @ts_check_nonces to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ts_check_nonces(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @TS_F_TS_CHECK_NONCES, align 4
  %14 = load i32, i32* @TS_R_NONCE_NOT_RETURNED, align 4
  %15 = call i32 @TSerr(i32 %13, i32 %14)
  store i32 0, i32* %3, align 4
  br label %26

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i64 @ASN1_INTEGER_cmp(i32* %17, i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i32, i32* @TS_F_TS_CHECK_NONCES, align 4
  %23 = load i32, i32* @TS_R_NONCE_MISMATCH, align 4
  %24 = call i32 @TSerr(i32 %22, i32 %23)
  store i32 0, i32* %3, align 4
  br label %26

25:                                               ; preds = %16
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %21, %12
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @TSerr(i32, i32) #1

declare dso_local i64 @ASN1_INTEGER_cmp(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
